--- a/test-2/test-2.html
+++ b/test-2/test-2.html
@@ -7,11 +7,14 @@
 </head>
 <body>
     <h1>Help! Where are my links?!</h1>
-<p>I'm supposed to have three links in this page-- one to the New York Times, one to CNN, and one to the LA Times. But they're all broken!!!</p>
-<a href="https://www.nytimes.com">
-<a herf="http://www.cnn.com">Why is this broken??? :(</a>
-<a href="http://www.latimes.com/" Help this LA Times link is broken!!!></a>
+    <p>I'm supposed to have three links in this page-- one to the New York Times, one to CNN, 
+        and one to the LA Times. But they're all broken!!!
+    </p>
+    <a href="http://www.nytimes.com">New York Times</a>
+    <a href="http://www.cnn.com">CNN</a>
+    <a href="http://www.latimes.com/">LA Times</a>
 
     
+
 </body>
 </html>
